<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    style="@style/width_match_parent_max_400"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_gravity="top|center"
    tools:context="org.hcilab.circog.DailySurveyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_survey_title"
        android:id="@+id/survey_title"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_light"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_survey_statement_1"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginBottom="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily_survey_pick_time"
                android:layout_centerInParent="true"
                android:onClick="showTimePickerDialog" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_survey_statement_2"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginBottom="16dp"/>

            <Spinner
            android:id="@+id/spinner_hours_slept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/survey_sleep_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_survey_sleep_quality"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginBottom="16dp"/>

            <RadioGroup
                android:id="@+id/survey_rg_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <RadioButton
                    android:id="@+id/survey_rg_1_rb_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/survey_scale_1"/>

                <RadioButton
                    android:id="@+id/survey_rg_1_rb_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/survey_scale_2"/>

                <RadioButton
                    android:id="@+id/survey_rg_1_rb_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/survey_scale_3"/>

                <RadioButton
                    android:id="@+id/survey_rg_1_rb_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/survey_scale_4"/>

                <RadioButton
                    android:id="@+id/survey_rg_1_rb_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/survey_scale_5"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/daily_survey_poor"
                    android:textColor="@android:color/primary_text_light"
                    android:layout_weight="1"
                    android:gravity="left"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/daily_survey_very_good"
                    android:textColor="@android:color/primary_text_light"
                    android:layout_weight="1"
                    android:gravity="right"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_card_view"
        android:visibility="gone"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error_message"
                android:text=""
                android:textSize="16sp"
                android:textColor="#FFAC5F5F"
                android:layout_marginBottom="0dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_send"
        android:id="@+id/survey_send"/>

</LinearLayout>

</ScrollView>